@@ -55,6 +55,7 @@ v.0.5dev (ongoing development)
  * server: fix interpretation of numeric priorities (Andrew M. Bishop)
  + hd44780 driver: new ConnectionType ethlcd (Mariusz Bialonczyk)
  + picolcd driver: support to send IR commands to LIRC (Jack Cleaver)
+ + picolcd driver: support for 20x4 picoLCDs (Nicu Pavel)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
